workaround to get notebooks working

--- a/notebooks and guides/Binomial Opts Guide.ipynb
+++ b/notebooks and guides/Binomial Opts Guide.ipynb
@@ -8,7 +8,7 @@
     "name": "ipython",
     "version": 3
    },
-   "version": "3.7.3"
+   "version": "3.7.3-final"
   },
   "orig_nbformat": 2,
   "file_extension": ".py",
@@ -16,7 +16,11 @@
   "name": "python",
   "npconvert_exporter": "python",
   "pygments_lexer": "ipython3",
-  "version": 3
+  "version": 3,
+  "kernelspec": {
+   "name": "python37364bitbasecondad6945e01540e4d0086b53a68cfcf3e5f",
+   "display_name": "Python 3.7.3 64-bit ('base': conda)"
+  }
  },
  "cells": [
   {
@@ -33,10 +37,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "os.chdir('..')\n",
+    "\n",
     "# from this package\n",
     "from atop.options.calloption import CallOption\n",
     "from atop.options.putoption import PutOption\n",
