--- a/notebooks and guides/MultPeriod Notebook.ipynb
+++ b/notebooks and guides/MultPeriod Notebook.ipynb
@@ -8,7 +8,7 @@
     "name": "ipython",
     "version": 3
    },
-   "version": "3.7.3"
+   "version": "3.7.3-final"
   },
   "orig_nbformat": 2,
   "file_extension": ".py",
@@ -16,7 +16,11 @@
   "name": "python",
   "npconvert_exporter": "python",
   "pygments_lexer": "ipython3",
-  "version": 3
+  "version": 3,
+  "kernelspec": {
+   "name": "python37364bitbasecondad6945e01540e4d0086b53a68cfcf3e5f",
+   "display_name": "Python 3.7.3 64-bit ('base': conda)"
+  }
  },
  "cells": [
   {
@@ -48,13 +52,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.chdir('..')\n",
+    "#print(os.getcwd())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "===============================================================================\n  INFORMATION FOR A SINGLE PEIORD CALL OPTION USING BINMOMIAL PRICING METHOD\n===============================================================================\n\nThe calculations below are for a single period CALL option where the underlying value is 100, \nwith a strike price of 110, an up price of 121, a down price of 90.25, and a risk free rate of 10.0%.\nAll outputs are rounded to 2 decimal places.  \n\n--------------\nCalculations\n--------------\nCalculated Option Price: $ 6.42\nCalculated Hedge Ratio: 0.36\nCalculated present value of bond position: $ -29.35\nUp state payoff is 11 and down state payoff is 0\nCalculated risk-neutral probability for up state is 0.64\nCalculated risk-neutral probability for down state is 0.36\n_____________________________________________________________________________________________________________\n\n"
+     "text": "===============================================================================\n  INFORMATION FOR A SINGLE PEIORD CALL OPTION USING BINOMIAL PRICING METHOD\n===============================================================================\n\nThe calculations below are for a single period CALL option where the underlying value is 100, \nwith a strike price of 110, an up price of 121, a down price of 90.25, and a risk free rate of 10.0.\nAll outputs are rounded to 2 decimal places.  \n\n--------------\nCalculations\n--------------\nCalculated Option Price: $ 6.42\nCalculated Hedge Ratio: 0.36\nCalculated present value of bond position: $ -29.35\nUp state payoff is 11 and down state payoff is 0\nCalculated risk-neutral probability for up state is 0.64\nCalculated risk-neutral probability for down state is 0.36\n________________________________________________________________________________________________________\n\n"
     }
    ],
    "source": [
@@ -139,7 +154,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "===============================================================================\n  INFORMATION FOR A SINGLE PEIORD CALL OPTION USING BINMOMIAL PRICING METHOD\n===============================================================================\n\nThe calculations below are for a single period CALL option where the underlying value is 110, \nwith a strike price of 110, an up price of 121, a down price of 104.5, and a risk free rate of 5.0%.\nAll outputs are rounded to 2 decimal places.  \n\n--------------\nCalculations\n--------------\nCalculated Option Price: $ 6.98\nCalculated Hedge Ratio: 0.67\nCalculated present value of bond position: $ -66.35\nUp state payoff is 11 and down state payoff is 0\nCalculated risk-neutral probability for up state is 0.67\nCalculated risk-neutral probability for down state is 0.33\n_____________________________________________________________________________________________________________\n\n"
+     "text": "===============================================================================\n  INFORMATION FOR A SINGLE PEIORD CALL OPTION USING BINOMIAL PRICING METHOD\n===============================================================================\n\nThe calculations below are for a single period CALL option where the underlying value is 110, \nwith a strike price of 110, an up price of 121, a down price of 104.5, and a risk free rate of 5.0.\nAll outputs are rounded to 2 decimal places.  \n\n--------------\nCalculations\n--------------\nCalculated Option Price: $ 6.98\nCalculated Hedge Ratio: 0.67\nCalculated present value of bond position: $ -66.35\nUp state payoff is 11 and down state payoff is 0\nCalculated risk-neutral probability for up state is 0.67\nCalculated risk-neutral probability for down state is 0.33\n________________________________________________________________________________________________________\n\n"
     }
    ],
    "source": [
@@ -174,7 +189,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "===============================================================================\n  INFORMATION FOR A SINGLE PEIORD CALL OPTION USING BINMOMIAL PRICING METHOD\n===============================================================================\n\nThe calculations below are for a single period CALL option where the underlying value is 95, \nwith a strike price of 110, an up price of 104.5, a down price of 90.25, and a risk free rate of 5.0%.\nAll outputs are rounded to 2 decimal places.  \n\n--------------\nCalculations\n--------------\nCalculated Option Price: $ 0.0\nCalculated Hedge Ratio: 0.0\nCalculated present value of bond position: $ 0.0\nUp state payoff is 0 and down state payoff is 0\nCalculated risk-neutral probability for up state is 0.67\nCalculated risk-neutral probability for down state is 0.33\n_____________________________________________________________________________________________________________\n\n"
+     "text": "===============================================================================\n  INFORMATION FOR A SINGLE PEIORD CALL OPTION USING BINOMIAL PRICING METHOD\n===============================================================================\n\nThe calculations below are for a single period CALL option where the underlying value is 95, \nwith a strike price of 110, an up price of 104.5, a down price of 90.25, and a risk free rate of 5.0.\nAll outputs are rounded to 2 decimal places.  \n\n--------------\nCalculations\n--------------\nCalculated Option Price: $ 0.0\nCalculated Hedge Ratio: 0.0\nCalculated present value of bond position: $ 0.0\nUp state payoff is 0 and down state payoff is 0\nCalculated risk-neutral probability for up state is 0.67\nCalculated risk-neutral probability for down state is 0.33\n________________________________________________________________________________________________________\n\n"
     }
    ],
    "source": [
@@ -222,7 +237,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "===============================================================================\n  INFORMATION FOR A SINGLE PEIORD CALL OPTION USING BINMOMIAL PRICING METHOD\n===============================================================================\n\nThe calculations below are for a single period CALL option where the underlying value is 100, \nwith a strike price of 110, an up price of 110, a down price of 95, and a risk free rate of 5.0%.\nAll outputs are rounded to 2 decimal places.  \nUSER HAS OPTED TO OVERRIDE PAYOFF VALUES! BE AWARE THIS WILL AFFECT CALCULATIONS!\n\n--------------\nCalculations\n--------------\nCalculated Option Price: $ 4.43\nCalculated Hedge Ratio: 0.47\nCalculated present value of bond position: $ -42.1\nUp state payoff is 6.98 and down state payoff is 0\nCalculated risk-neutral probability for up state is 0.67\nCalculated risk-neutral probability for down state is 0.33\n_____________________________________________________________________________________________________________\n\n"
+     "text": "===============================================================================\n  INFORMATION FOR A SINGLE PEIORD CALL OPTION USING BINOMIAL PRICING METHOD\n===============================================================================\n\nThe calculations below are for a single period CALL option where the underlying value is 100, \nwith a strike price of 110, an up price of 110, a down price of 95, and a risk free rate of 5.0.\nAll outputs are rounded to 2 decimal places.  \nUSER HAS OPTED TO OVERRIDE PAYOFF VALUES! BE AWARE THIS WILL AFFECT CALCULATIONS!\n\n--------------\nCalculations\n--------------\nCalculated Option Price: $ 4.43\nCalculated Hedge Ratio: 0.47\nCalculated present value of bond position: $ -42.1\nUp state payoff is 6.98 and down state payoff is 0\nCalculated risk-neutral probability for up state is 0.67\nCalculated risk-neutral probability for down state is 0.33\n________________________________________________________________________________________________________\n\n"
     }
    ],
    "source": [
@@ -253,7 +268,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "===============================================================================\n  INFORMATION FOR A SINGLE PEIORD CALL OPTION USING BINMOMIAL PRICING METHOD\n===============================================================================\n\nThe calculations below are for a single period CALL option where the underlying value is 100, \nwith a strike price of 110, an up price of 110, a down price of 95, and a risk free rate of 5.0%.\nAll outputs are rounded to 2 decimal places.  \nUSER HAS OPTED TO OVERRIDE PAYOFF VALUES! BE AWARE THIS WILL AFFECT CALCULATIONS!\n\n--------------\nCalculations\n--------------\nCalculated Option Price: $ 4.43\nCalculated Hedge Ratio: 0.47\nCalculated present value of bond position: $ -42.13\nUp state payoff is 6.98 and down state payoff is 0\nCalculated risk-neutral probability for up state is 0.67\nCalculated risk-neutral probability for down state is 0.33\n_____________________________________________________________________________________________________________\n\n"
+     "text": "===============================================================================\n  INFORMATION FOR A SINGLE PEIORD CALL OPTION USING BINOMIAL PRICING METHOD\n===============================================================================\n\nThe calculations below are for a single period CALL option where the underlying value is 100, \nwith a strike price of 110, an up price of 110, a down price of 95, and a risk free rate of 5.0.\nAll outputs are rounded to 2 decimal places.  \nUSER HAS OPTED TO OVERRIDE PAYOFF VALUES! BE AWARE THIS WILL AFFECT CALCULATIONS!\n\n--------------\nCalculations\n--------------\nCalculated Option Price: $ 4.43\nCalculated Hedge Ratio: 0.47\nCalculated present value of bond position: $ -42.13\nUp state payoff is 6.98 and down state payoff is 0\nCalculated risk-neutral probability for up state is 0.67\nCalculated risk-neutral probability for down state is 0.33\n________________________________________________________________________________________________________\n\n"
     }
    ],
    "source": [
@@ -281,7 +296,7 @@
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "===============================================================================\n  INFORMATION FOR A SINGLE PEIORD PUT OPTION USING BINMOMIAL PRICING METHOD\n===============================================================================\n\nThe calculations below are for a single period PUT option where the underlying value is 100, \nwith a strike price of 110, an up price of 110, a down price of 95, and a risk free rate of 5.0%.\nAll outputs are rounded to 2 decimal places.  \nUSER HAS OPTED TO OVERRIDE PAYOFF VALUES! BE AWARE THIS WILL AFFECT CALCULATIONS!\n\n--------------\nCalculations\n--------------\nCalculated Option Price: $ 4.21\nCalculated Hedge Ratio: -0.53\nCalculated present value of bond position: $ 57.65\nUp state payoff is 1.75 and down state payoff is 9.76\nCalculated risk-neutral probability for up state is 0.67\nCalculated risk-neutral probability for down state is 0.33\n_____________________________________________________________________________________________________________\n\n"
+     "text": "===============================================================================\n  INFORMATION FOR A SINGLE PEIORD PUT OPTION USING BINOMIAL PRICING METHOD\n===============================================================================\n\nThe calculations below are for a single period PUT option where the underlying value is 100, \nwith a strike price of 110, an up price of 110, a down price of 95, and a risk free rate of 5.0.\nAll outputs are rounded to 2 decimal places.  \nUSER HAS OPTED TO OVERRIDE PAYOFF VALUES! BE AWARE THIS WILL AFFECT CALCULATIONS!\n\n--------------\nCalculations\n--------------\nCalculated Option Price: $ 4.21\nCalculated Hedge Ratio: -0.53\nCalculated present value of bond position: $ 57.65\nUp state payoff is 1.75 and down state payoff is 9.76\nCalculated risk-neutral probability for up state is 0.67\nCalculated risk-neutral probability for down state is 0.33\n________________________________________________________________________________________________________\n\n"
     }
    ],
    "source": [
@@ -500,13 +515,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
-     "text": "===============================================================================\n  INFORMATION FOR A SINGLE PEIORD CALL OPTION USING BINMOMIAL PRICING METHOD\n===============================================================================\n\nThe calculations below are for a single period CALL option where the underlying value is 100, \nwith a strike price of 110, an up price of 112.82, a down price of 92.24, and a risk free rate of 2.532%.\nAll outputs are rounded to 2 decimal places.  \nUSER HAS OPTED TO OVERRIDE PAYOFF VALUES! BE AWARE THIS WILL AFFECT CALCULATIONS!\n\n--------------\nCalculations\n--------------\nCalculated Option Price: $ 4.11\nCalculated Hedge Ratio: 0.41\nCalculated present value of bond position: $ -36.85\nUp state payoff is 8.43 and down state payoff is 0\nCalculated risk-neutral probability for up state is 0.5\nCalculated risk-neutral probability for down state is 0.5\n_____________________________________________________________________________________________________________\n\n"
+     "text": "===============================================================================\n  INFORMATION FOR A SINGLE PEIORD CALL OPTION USING BINOMIAL PRICING METHOD\n===============================================================================\n\nThe calculations below are for a single period CALL option where the underlying value is 100, \nwith a strike price of 110, an up price of 112.82, a down price of 92.24, and a risk free rate of 2.532.\nAll outputs are rounded to 2 decimal places.  \nUSER HAS OPTED TO OVERRIDE PAYOFF VALUES! BE AWARE THIS WILL AFFECT CALCULATIONS!\n\n--------------\nCalculations\n--------------\nCalculated Option Price: $ 4.11\nCalculated Hedge Ratio: 0.41\nCalculated present value of bond position: $ -36.85\nUp state payoff is 8.43 and down state payoff is 0\nCalculated risk-neutral probability for up state is 0.5\nCalculated risk-neutral probability for down state is 0.5\n________________________________________________________________________________________________________\n\n"
     }
    ],
    "source": [
